[tool.poetry]
name = "databreeze"
version = "1.0.0"
description = "Package providing tools to simplify data science operations"
authors = ["Jonathan Mair <jonathan.mair@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "databreeze"}]

[tool.poetry.dependencies]
python = ">=3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
lorem = "^0.1.1"
pyaml = "^23.9.7"
jupyterlab = "^4.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"